add content in the popup page
add content for the following works:
uhn project
eepo
abstract of green splash
add image albumn for early autumn

--- a/bio.html
+++ b/bio.html
@@ -43,7 +43,8 @@
         </div>
     <div class="main-content">
             <div class="h1">
-                <h1>Bio</h1>
+                <h1></h1>
+                <img src="greeting.png" alt="greeting" class="landingpage-img">
             </div>
         </body>
         </html>
