--- a/bio.html
+++ b/bio.html
@@ -11,34 +11,33 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="sidebar-content">
-                <h1 class="brand-name">JESSY.Z</h1>
-                <nav>
-                    <ul class="menu">
-                        <li class="menu-item">
-                            <a href="#" aria-haspopup="true">WORK GALLERY</a>
-                            <ul class="submenu">
-                                <li><a href="#">Major Work</a></li>
-                                <li><a href="#">Featured Work</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#" aria-haspopup="true">LOVING THING</a>
-                            <ul class="submenu">
-                                <li><a href="#">Photography</a></li>
-                                <li><a href="#">Design</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#" aria-haspopup="true">About Me</a>
-                            <ul class="submenu">
-                                <li><a href="#">Biography</a></li>
-                                <li><a href="#">Resume</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+            <h1 class="brand-name">JESSY.Z</h1>
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item ">
+                        <a href="#" aria-haspopup="true">WORK GALLERY</a>
+                        <ul class="submenu">
+                            <li><a href="/">Major Work</a></li>
+                            <li><a href="/featured">Featured Work</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#" aria-haspopup="true">LOVING THING</a>
+                        <ul class="submenu">
+                            <li><a href="/photo.html">Photography</a></li>
+                            <li><a href="/maker">Maker Project</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item active">
+                        <a href="#" aria-haspopup="true">About Me</a>
+                        <ul class="submenu">
+                            <li><a class="active" href="/bio">Biography</a></li>
+                            <li><a href="#">Resume</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+
             <footer class="footer">
                 <ul class="social-icons">
                     <li>
