--- a/bio.html
+++ b/bio.html
@@ -12,6 +12,7 @@
     <div class="container">
         <div class="sidebar">
             <h1 class="brand-name">JESSY.Z</h1>
+            <a href="landing.html"></a>
             <nav>
                 <ul class="menu">
                     <li class="menu-item ">
@@ -24,8 +25,9 @@
                     <li class="menu-item">
                         <a href="#" aria-haspopup="true">LOVING THING</a>
                         <ul class="submenu">
-                            <li><a href="/photo.html">Photography</a></li>
                             <li><a href="/maker">Maker Project</a></li>
+                            <li><a href="/photo.html">Photography</a></li>
+                            
                         </ul>
                     </li>
                     <li class="menu-item active">
@@ -41,23 +43,18 @@
             <footer class="footer">
                 <ul class="social-icons">
                     <li>
-                            <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia1.png" alt="LinkedIn" class="social-icon">
+                        <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
+                                <img src="linkedin.png" alt="LinkedIn" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://scholar.google.com/citations?user=J-7ZqgkAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia2.png" alt="Google Scholar" class="social-icon">
+                                <img src="googlescholar.png" alt="Google Scholar" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://www.instagram.com/jessyzhang_art/" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia3.png" alt="GitHub" class="social-icon">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia4.png" alt="Instagram" class="social-icon">
+                                <img src="github.png" alt="GitHub" class="social-icon">
                             </a>
                         </li>
                     </ul>
@@ -65,37 +62,39 @@
             </footer>
         </div>
         <div class="main-content">
-            <div class="greeting-image">
-                <img src="greeting.png" alt="bio greeting" class="greeting-image">
-            </div>
-            <div class="bio-section">
-                <h2 class="bio-title">About Me</h2>
-                <p class="bio-text about-me-text">
-                    Hello, my name is Jessy.
-                    I am a digital artist and a UX researcher intrigued by applying cutting-edge technologies, such as XR and IoT, to make people's daily life productive and enjoyable. A bunch of my works relate to web and mobile design and interactive installation. My research focuses on XR accessible design and voice interface design. Meanwhile, I am also a yoga lover and always try to find inner balance.
-                    With a palette of pixels and a canvas of code, I craft digital experiences that blend aesthetics with functionality. Each project I undertake is a canvas for innovation, where I sculpt interfaces that engage and inspire. My passion for XR and IoT drives me to reshape reality, to bridge the physical and virtual, and to ignite a new era of interactive storytelling.
-                    Exploring the uncharted territories of XR accessible design, I seek to dissolve barriers and usher in inclusivity for all. In the realm of voice interface design, I orchestrate harmonious conversations between humans and machines, ensuring that technology speaks our language.
-                    When I'm not immersed in pixels and prototypes, you'll find me on the yoga mat, embracing the art of mindfulness. Just as I strive to find balance in my practice, I'm committed to infusing balance into every design and research endeavor. So let's embark on this journey together, where creativity meets innovation and humanity meets technology.
-                </p>
-                <h2 class="bio-title">Publications</h2>
-                <ul class="publications">
-                    <li>
-                        <h3>Emissary educator playmate oracle (eepo): A human-technology framework and xr to support child well-being</h3>
-                        <p>2023 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct), 2023</p>
-                    </li>
-                    <li>
-                        <h3>Designing EEPO: An Emissary Educator Playmate Oracle XR Conversation Agent for Children</h3>
-                        <p>2024 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW), 2024</p>
-                    </li>
-                    <li>
-                        <h3>Wonder Vision: Augmented Reality and Conversational Interfaces to Facilitate Wayfinding for the Visually Impaired</h3>
-                        <p>Proceedings of the 32nd Annual International Conference on Computer Science and Software Engineering, 2022</p>
-                    </li>
-                    <li>
-                        <h3>Wonder Vision-A Hybrid Way-finding System to assist people with Visual Impairment</h3>
-                        <p>OCAD University, 2022</p>
-                    </li>
-                </ul>
+            <div class="greeting-bio">
+                <div class="greeting-image">
+                    <img src="portrait.png" alt="bio greeting">
+                </div>
+                <div class="bio-section">
+                    <h2 class="bio-title">About Me</h2>
+                    <p class="bio-text about-me-text">
+                        Hello, my name is Jessy.
+                        I am a digital artist and a UX researcher intrigued by applying cutting-edge technologies, such as XR and IoT, to make people's daily life productive and enjoyable. A bunch of my works relate to web and mobile design and interactive installation. My research focuses on XR accessible design and voice interface design. Meanwhile, I am also a yoga lover and always try to find inner balance.
+                        With a palette of pixels and a canvas of code, I craft digital experiences that blend aesthetics with functionality. Each project I undertake is a canvas for innovation, where I sculpt interfaces that engage and inspire. My passion for XR and IoT drives me to reshape reality, to bridge the physical and virtual, and to ignite a new era of interactive storytelling.
+                        Exploring the uncharted territories of XR accessible design, I seek to dissolve barriers and usher in inclusivity for all. In the realm of voice interface design, I orchestrate harmonious conversations between humans and machines, ensuring that technology speaks our language.
+                        When I'm not immersed in pixels and prototypes, you'll find me on the yoga mat, embracing the art of mindfulness. Just as I strive to find balance in my practice, I'm committed to infusing balance into every design and research endeavor. So let's embark on this journey together, where creativity meets innovation and humanity meets technology.
+                    </p>
+                    <h2 class="bio-title">Publications</h2>
+                    <ul class="publications">
+                        <li>
+                            <h3 class="publication-title">* Emissary educator playmate oracle (eepo): A human-technology framework and xr to support child well-being</h3>
+                            <p class="publication-details">2023 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct), 2023</p>
+                        </li>
+                        <li>
+                            <h3 class="publication-title">* Designing EEPO: An Emissary Educator Playmate Oracle XR Conversation Agent for Children</h3>
+                            <p class="publication-details">2024 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW), 2024</p>
+                        </li>
+                        <li>
+                            <h3 class="publication-title">* Wonder Vision: Augmented Reality and Conversational Interfaces to Facilitate Wayfinding for the Visually Impaired</h3>
+                            <p class="publication-details">Proceedings of the 32nd Annual International Conference on Computer Science and Software Engineering, 2022</p>
+                        </li>
+                        <li>
+                            <h3 class="publication-title">* Wonder Vision-A Hybrid Way-finding System to assist people with Visual Impairment</h3>
+                            <p class="publication-details">OCAD University, 2022</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
