--- a/bio.html
+++ b/bio.html
@@ -44,17 +44,17 @@
                 <ul class="social-icons">
                     <li>
                         <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
-                                <img src="linkedin.png" alt="LinkedIn" class="social-icon">
+                                <img src="icons/linkedin.png" alt="LinkedIn" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://scholar.google.com/citations?user=J-7ZqgkAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
-                                <img src="googlescholar.png" alt="Google Scholar" class="social-icon">
+                                <img src="icons/googlescholar.png" alt="Google Scholar" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://github.com/xinzhang-jessy" target="_blank" rel="noopener noreferrer">
-                                <img src="github.png" alt="GitHub" class="social-icon">
+                                <img src="icons/github.png" alt="GitHub" class="social-icon">
                             </a>
                         </li>
                     </ul>
